# encoder_prova

./: CMakeLists.txt  CMakeLists.txt.user.5c190ef.4.9-pre1  bcmencoder.cpp  main.cpp
